force-app/main/default/objects/Portfolio_Item__c/Portfolio_Item__c.object-meta.xml
<CustomObject>
    <description>Data model for the Personal Portfolio Agent template. Each record is one piece of the owner&apos;s public profile: bio, resume, LinkedIn, blogs, YouTube, GitHub, or projects.</description>
    <label>Portfolio Item</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>