force-app/main/default/objects/Portfolio_Item__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to hide this item from the agent without deleting it.</description>
    <inlineHelpText>Uncheck to hide this item from the public site and AI agent without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>