force-app/main/default/objects/Portfolio_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Bio text, blog summary, role highlights, or any details the agent should share about this item.</description>
    <inlineHelpText>Main text shown for this item — bio, blog summary, or role highlights. The AI agent can share this with site visitors.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>