force-app/main/default/objects/Portfolio_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for time-bound items. Leave blank to show &quot;Present&quot; on the public site (e.g. a current role).</description>
    <inlineHelpText>End date for time-bound items. Leave blank to show &quot;Present&quot; (e.g. your current role).</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>