force-app/main/default/objects/Portfolio_Item__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this item is highlighted in the &quot;Featured work&quot; section at the top of the public site.</description>
    <inlineHelpText>Check to highlight this item in the &quot;Featured work&quot; section at the top of the public site.</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>