force-app/main/default/objects/Portfolio_Item__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Controls the order items are returned to the agent. Lower numbers come first.</description>
    <inlineHelpText>Controls the order items are shown and returned to the agent — lower numbers appear first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>