force-app/main/default/objects/Portfolio_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for time-bound items (experience, education, projects). Powers the chronological timeline on the public site.</description>
    <inlineHelpText>Start date for time-bound items (experience, education, projects). Powers the chronological timeline on the public site.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>