force-app/main/default/objects/Portfolio_Item__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>Short supporting line shown under the title — role and company for experience, issuer for a certification, publication name for an article, or a one-line tagline for a project.</description>
    <inlineHelpText>Short supporting line under the title — e.g. role and company, a certification&apos;s issuer, a publication name, or a one-line project tagline.</inlineHelpText>
    <label>Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>