force-app/main/default/objects/Portfolio_Item__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <description>Comma-separated tags rendered as chips on the public site — e.g. &quot;Apex, LWC, Agentforce, Node.js&quot;. Use for project tech stacks or skill tags.</description>
    <inlineHelpText>Comma-separated tags rendered as chips on the site, e.g. &quot;Apex, LWC, Agentforce, Node.js&quot;. Use for project tech stacks or skill tags.</inlineHelpText>
    <label>Tags / Tech Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>