force-app/main/default/objects/Portfolio_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Category the agent and public site use to group and render items. Picklist for consistent matching; not restricted, so the API/agent can still store custom values. Pick &quot;Other&quot; in the manager to enter a custom type.</description>
    <inlineHelpText>What kind of item this is (Bio, Experience, Project, Certification, or a link like LinkedIn/GitHub). Drives how the agent and public site group and display it. Pick the closest match.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>White Paper</fullName>
            </value>
            <value>
                <fullName>Talk</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Award</fullName>
                <label>Award / Reward</label>
            </value>
            <value>
                <fullName>Volunteering</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>AI Tool</fullName>
            </value>
            <value>
                <fullName>Endorsement</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Now</fullName>
                <label>Currently</label>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>