force-app/main/default/objects/Portfolio_Item__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Link to the resource. Leave blank for Bio items.</description>
    <inlineHelpText>Primary link for this item (project demo, article, profile, or repo). Leave blank for Bio items.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>