force-app/main/default/objects/Portfolio_Item__c/listViews/All_Items.listView-meta.xml
<ListView>
    <fullName>All_Items</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>URL__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Description__c</columns>
    <columns>Resume_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
</ListView>